--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://idontknow/todo.git"
+		"url": "https://github.com/chi-vo107/boilerplate-npm.git"
 	},
 	"author": "chi"
 }
